// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Default > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdKt gJDuSr"
    data-rc="Checkbox"
  >
    <button
      aria-checked="false"
      class="sc-gsnScm dNaquf"
      data-state="unchecked"
      role="checkbox"
      type="button"
      value="on"
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-eDvSVe cYuVyI"
    data-rc="Checkbox"
  >
    <button
      aria-checked="false"
      class="sc-gswNZR cSNIzy"
      data-state="unchecked"
      role="checkbox"
      type="button"
      value="on"
    />
  </div>
</DocumentFragment>
`;
